# Strava-Run-Coach-MCP-Server

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
data/: .gitkeep
src/runcoach/: __init__.py  auth.py  server.py  storage.py  strava.py
