[project]
name = "runcoach"
version = "0.1.0"
description = "Strava Run Coach MCP Server for Claude Desktop"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/runcoach"]
